[package]
name = "infoget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.23.0"
serde = { version = "1.0.196", features = ["derive"] }
sysinfo = "0.30.5"
tokio = { version = "1.35.1", features = ["sync", "macros"] }
toml = "0.8.8"
